attempts to fix padding at bottom of page on mobile devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -157,7 +157,7 @@ code {
 }
 
 .page-footer {
-  padding: 0 40px 60px;
+  padding: 0 40px 40px;
 }
 
 .page-footer.footer-alt {
@@ -226,7 +226,7 @@ code {
   }
 
   .page-footer {
-    padding: 0 20px;
+    padding: 0 20px 40px;
   }
 }
 
@@ -251,7 +251,7 @@ code {
   }
 
   .page-footer {
-    padding: 0 10px;
+    padding: 0 10px 40px;
   }
 
   .clipboard-confirmation {
